[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/environment/save/Save2.png" type="Texture" id=1]
[ext_resource path="res://assets/environment/save/Save1.png" type="Texture" id=2]
[ext_resource path="res://assets/environment/E.png" type="Texture" id=3]
[ext_resource path="res://props/save_point/SAVE.gd" type="Script" id=4]
[ext_resource path="res://assets/audio/ui/se_heal.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 24 )

[node name="savepoint" type="Node2D"]
position = Vector2( 0, -32 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="machine" type="Sprite" parent="."]
position = Vector2( 56, 0 )
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="machine"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="machine/StaticBody2D"]
position = Vector2( -8, -16 )
shape = SubResource( 1 )
one_way_collision = true

[node name="E" type="Sprite" parent="."]
position = Vector2( 0, -32 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 8 )
shape = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "fx"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
